<resources>
    <string name="app_name">Temperature Converter</string>

    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>

    <string name="convert_prompt">Convert:</string>
    <string name="temperature_hint">Temperature</string>
    <string name="convert_button">Convert</string>
    <string name="convert_from">From</string>
    <string name="convert_to">To</string>

    <string name="c_to_f_formula">[&#176;F] = ([&#176;C] X 9/5) + 32</string>
    <string name="c_to_k_formula">[&#176;K] = [&#176;C] + 273.15</string>

    <string name="f_to_c_formula">[&#176;C] = ([&#176;F] - 32) / 9/5</string>
    <string name="f_to_k_formula">[&#176;K] = ([&#176;F] + 459.67) / 9/5</string>

    <string name="k_to_c_formula">[&#176;C] = [&#176;K] - 273.15</string>
    <string name="k_to_f_formula">[&#176;F] = [&#176;K] X 9/5 - 459.67</string>

    <string name="c_to_f_result">%1$.2f&#176;C = %2$.2f&#176;F</string>
    <string name="c_to_k_result">%1$.2f&#176;C = %2$.2f&#176;K</string>

    <string name="f_to_c_result">%1$.2f&#176;F = %2$.2f&#176;C</string>
    <string name="f_to_k_result">%1$.2f&#176;F = %2$.2f&#176;K</string>

    <string name="k_to_c_result">%1$.2f&#176;K = %2$.2f&#176;C</string>
    <string name="k_to_f_result">%1$.2f&#176;K = %2$.2f&#176;F</string>

    <string name="form_error">You must enter a Number to convert, a From unit, and a different To unit</string>
</resources>
